# containers

./: .gitignore  CHANGELOG.md  renovate.json
.github/: dependabot.yml
.github/actions/build-and-push/: action.yml
.github/workflows/: build-and-push.yaml  build-and-push.yml  build-publish.yml  build-test.yaml  common-jobs.yaml  create-runner.yaml  ghcr-publish.yml  pr-test.yaml  spawn-jobs.yaml  spawn-jobs.yml  test-actions-runner.yaml.disabled  test-actions-runner.yml  test-avahi.yaml.disabled  test-avahi.yml  test-certbot-cloudflare.yaml  test-certbot-cloudflare.yml  test-fullbogons.yaml  test-fullbogons.yml  test-growatt-ev.yaml  test-growatt-ev.yml  test-influx.yaml  test-influx.yml  test-iperf2.yaml  test-iperf2.yml  test-iperf3.yaml  test-iperf3.yml  test-irrd.yaml  test-irrd.yml  test-irrexplorer.yaml.disabled  test-irrexplorer.yml  test-mdns-reflector.yaml.disabled  test-mdns-reflector.yml  test-oxidized.yaml.disabled  test-oxidized.yml  test-rng-tools.yaml.disabled  test-rng-tools.yml  test-speedtest.yaml  test-speedtest.yml  test-stun.yaml.disabled  test-stun.yml  (+10 more)
.github/workflows/archived/: test-actions-runner.yaml.disabled  test-avahi.yaml.disabled  test-rng-tools.yaml.disabled  test-stun.yaml.disabled  test-xteve.yaml.disabled
actions-runner/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
ansible-network-backup/: Dockerfile  README.md  ansible-cron  config-backup.yaml  config_backup.yaml  docker-compose.yml  entrypoint.sh  hosts.yaml  vars.yaml
avahi/: Dockerfile  README.md  entrypoint.sh
certbot-cloudflare/: Dockerfile  certbot-cron  docker-compose.yml  entrypoint.sh  entrypoint_test.sh
fullbogons/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  fullbogons.py  requirements.txt
fullbogons/crontab/: fullbogons-cron
fullbogons/templates/: bird.j2
growatt-ev/: .gitignore  Dockerfile  crontab  docker-compose.yaml  main.py  main2.py
influx/: Dockerfile
influx/config/: config.toml
influx/s6/: run
iperf2/: Dockerfile  README.md  docker-compose.yaml
iperf3/: Dockerfile  README.md  docker-compose.yaml
irrd/: Dockerfile  Dockerfile.dockerfile  README.md  docker-compose.yaml  irrd.yaml  irrexplorer.yaml  pyproject.toml
irrd/s6-rc.d/init-irrd/: up
irrd/s6-rc.d/init-irrexplorer/: up
irrd/s6-rc.d/svc-irrd/: run
irrd/s6-rc.d/svc-irrexplorer/: finish  run
irrd/s6-rc.d/svc-supercronic/: run
irrd/scripts/: init-irrd.py  init-irrd.sh  init-irrexplorer.py  init-irrexplorer.sh  svc-irrexplorer.py
irrexplorer/: Dockerfile  README.md  entrypoint.sh
mdns-reflector/: Dockerfile
mdns-reflector/s6-rc.d/svc-mdns-reflector/: run
otbr/ot-br-posix-conditional_avahi/.github/workflows/: macOS.yml
otbr/ot-br-posix-conditional_avahi/script/: bootstrap  server
otbr/ot-br-posix-conditional_avahi/src/web/web-service/frontend/: package-lock.json  package.json
oxidized/: Dockerfile  README.md  config  docker-compose.yml  entrypoint.sh
peeringdb-mirror/: Dockerfile  config.yaml  entrypoint.sh  peeringdb-mirror-cron  peeringdb-mirror-update.sh  pyproject.toml
ptokax/: Dockerfile  README.md  entrypoint.sh  makefile-alpine
rng-tools/: Dockerfile  README.md
speedtest/: Dockerfile  docker-compose.yaml  speedtest.sh
speedtest/s6-rc.d/init-speedtest/: up
stun/: Dockerfile  README.md  docker-compose.yaml
telegraf/: Dockerfile  README.md  entrypoint.sh
telegraf/s6-rc.d/svc-telegraf/: run
verlihub/: Dockerfile  Dockerfile-alpine  Dockerfile-debian  Dockerfile-distroless  Dockerfile-ubuntu  README.md  docker-compose.yaml  entrypoint.sh
verlihub/s6-rc.d/init-verlihub/: up
verlihub/s6-rc.d/svc-verlihub/: run
verlihub/scripts/: setup.py
vyos-blog-alert/: Dockerfile  crontab  main.py  pyproject.toml
vyos-release-alert/: Dockerfile  docker-compose.yaml  main.py  pyproject.toml
xteve/: Dockerfile
xteve/s6-rc.d/svc-xteve/: run
yancobat/: Dockerfile  README.md  ansible-cron  clone-repo.yaml  config-backup.yaml  docker-compose.yml  entrypoint.sh  hosts.yaml  pyproject.toml  vars.yaml  yancobat-backup.yaml  yancobat-setup.yaml
