[tool.poetry]
name = "irrd"
version = "0.0.1"
description = "IRRd Test"
authors = ["MattKobayashi <matthew@kobayashi.au>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.13.0"
psycopg2-binary = "2.9.9"
PyYAML = "6.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core==1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py311']
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
