[tool.poetry]
name = "peeringdb-mirror"
version = "0.0.1"
description = "A functional mirror of the PeeringDB database with API"
authors = ["MattKobayashi <matthew@kobayashi.au>"]

[tool.poetry.dependencies]
python = "^3.11"
setuptools = "^69.0.3"
peeringdb = "^2.0.0"
django-peeringdb = "^3.3.0"
django = "^4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py311']
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
