[tool.poetry]
name = "vyos-release-alert"
version = "0.0.1"
description = "A script to check for new VyOS release blog posts"
authors = ["MattKobayashi <matthew@kobayashi.au>"]

[tool.poetry.dependencies]
python = "^3.11"
feedparser = "^6.0.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py311']
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
