[tool.poetry]
name = "yancobat"
version = "0.1.0"
description = "Yet Another Network COnfiguration BAckup Tool"
authors = ["MattKobayashi <matthew@kobayashi.au>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.13.1"
requests = "2.32.3"
ansible-pylibssh = "1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core==2.0.1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py313']
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
